[FIX] side-menu overflow.

--- a/_extensions/odoo/static/aside.less
+++ b/_extensions/odoo/static/aside.less
@@ -8,6 +8,8 @@
     font-size   : 0.85em;
     line-height : 1.5;
     font-weight : @fw_medium;
+    overflow-y  : auto;
+    height      : 100%;
 
     &.affix {
         z-index            : 2;
@@ -21,7 +23,6 @@
     }
 
     > ul.list-group {
-        overflow-y: scroll;
         margin    : 0;
         z-index   : 0;
     }
